Add URL shortener service with base functionality
Introduced the URL shortener service, including its core logic, utility classes (e.g., Base62Utils), and exceptions for better error handling. Configured JPA repositories with auditing and integrated database migrations via Liquibase. Enhanced cloud configurations across services and streamlined Docker and Maven configurations.

--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -8,6 +8,7 @@
         <artifactId>bardsey</artifactId>
         <version>1.0.0</version>
     </parent>
+
     <artifactId>api-gateway</artifactId>
     <packaging>jar</packaging>
     <version>1.0.0</version>
@@ -15,6 +16,7 @@
     <description>api-gateway</description>
 
     <dependencies>
+        <!-- CLOUD -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
@@ -27,11 +29,49 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
+        <!-- TEST -->
         <dependency>
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-test</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <annotationProcessorPaths combine.children="append">
+
+                    </annotationProcessorPaths>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                        </exclude>
+                    </excludes>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.cyclonedx</groupId>
+                <artifactId>cyclonedx-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
