--- a/api-gateway/src/main/resources/application.yaml
+++ b/api-gateway/src/main/resources/application.yaml
@@ -5,11 +5,12 @@ spring:
   application:
     name: ${API_GATEWAY_NAME:api-gateway}
   profiles:
-    group:
-      dev-local:
-        - postgres
-        - local
+#    group:
+#      dev-local:
+#        - postgres
+#        - local
 #    active: standalone
+    active: cloudconfig
   main:
     web-application-type: reactive
   docker:
@@ -29,7 +30,7 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE}
+      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://localhost:8761/eureka/}
     enabled: true
     fetch-registry: true
     register-with-eureka: true
@@ -73,6 +74,6 @@ spring:
   cloud:
     config:
       enabled: true
-      uri: ${CONFIG_SERVER_HOST}:${CONFIG_SERVER_PORT}
-      name: ${API_GATEWAY_NAME}
+      uri: ${CONFIG_SERVER_HOST:http://localhost}:${CONFIG_SERVER_PORT:8888}
+      name: ${API_GATEWAY_NAME:${spring.application.name}}
       profile: cloudconfig, git
