--- a/config-server/src/main/resources/configs/api-gateway.yaml
+++ b/config-server/src/main/resources/configs/api-gateway.yaml
@@ -1,9 +1,9 @@
 server:
-  port: ${API_GATEWAY_PORT}
+  port: ${API_GATEWAY_PORT:8080}
 
 spring:
   application:
-    name: ${API_GATEWAY_NAME}
+    name: ${API_GATEWAY_NAME:api-gateway}
   cloud:
     gateway:
       discovery:
@@ -19,7 +19,7 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE}
+      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://localhost:8761/eureka/}
     enabled: true
     fetch-registry: true
     register-with-eureka: true
