--- a/config-server/src/main/resources/configs/discovery-server.yaml
+++ b/config-server/src/main/resources/configs/discovery-server.yaml
@@ -1,9 +1,9 @@
 server:
-  port: ${DISCOVERY_SERVER_PORT}
+  port: ${DISCOVERY_SERVER_PORT:8761}
 
 spring:
   application:
-    name: ${DISCOVERY_SERVER_NAME}
+    name: ${DISCOVERY_SERVER_NAME:discovery-server}
   docker:
     compose:
       enabled: false
@@ -13,7 +13,7 @@ eureka:
     register-with-eureka: false
     fetch-registry: false
     service-url:
-      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE}
+      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://localhost:8761/eureka/}
 
 management:
   info:
