--- a/discovery-server/src/main/resources/application.yaml
+++ b/discovery-server/src/main/resources/application.yaml
@@ -12,15 +12,16 @@ spring:
   cloud:
     config:
       enabled: false
-#  profiles:
+  profiles:
 #    active: standalone
+    active: cloudconfig
 
 eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
     service-url:
-      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE}
+      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://localhost:8761/eureka/}
 
 management:
   info:
@@ -65,6 +66,6 @@ spring:
   cloud:
     config:
       enabled: true
-      uri: ${CONFIG_SERVER_HOST}:${CONFIG_SERVER_PORT}
-      name: ${DISCOVERY_SERVER_NAME}
+      uri: ${CONFIG_SERVER_HOST:http://localhost}:${CONFIG_SERVER_PORT:8888}
+      name: ${DISCOVERY_SERVER_NAME:${spring.application.name}}
       profile: cloudconfig, git
