Refactor configurations and enhance Gateway error handling
Added custom error handling in the API Gateway using `GlobalErrorHandler` and `CommonHttpException` for improved response management. Updated application configurations, including compression and connection pool settings, and enhanced Dockerfiles with JVM options for better performance. Removed redundant Maven plugin configurations from project modules and configured custom routing for the Gateway.

--- a/api-gateway/src/main/resources/application.yaml
+++ b/api-gateway/src/main/resources/application.yaml
@@ -13,6 +13,8 @@ spring:
     active: cloudconfig
   main:
     web-application-type: reactive
+#  webflux:
+#    base-path: /
   docker:
     compose:
       enabled: false
