--- a/url-shortener-service/src/main/resources/application.yaml
+++ b/url-shortener-service/src/main/resources/application.yaml
@@ -1,5 +1,9 @@
 server:
   port: ${URL_SHORTENER_PORT:8081}
+  compression:
+    enabled: true
+    mime-types: application/json,application/xml,text/html,text/plain
+    min-response-size: 1024
 
 spring:
   application:
@@ -23,8 +27,10 @@ spring:
     username: ${POSTGRES_USER:test}
     password: ${POSTGRES_PASSWORD:test}
     hikari:
-      minimum-idle: 0
+      minimum-idle: 5
       maximum-pool-size: 30
+      idle-timeout: 30000
+      connection-timeout: 2000
       max-lifetime: 900000
       transaction-isolation: TRANSACTION_READ_COMMITTED
       auto-commit: false
