Optimize Java runtime configurations and resource limits.
Enhanced Dockerfile JVM options across services to improve memory management, garbage collection, and error handling. Updated `compose.yaml` to adjust memory resource limits for better container performance.

--- a/compose.yaml
+++ b/compose.yaml
@@ -5,6 +5,10 @@ services:
     build:
       context: ./config-server
       dockerfile: ./Dockerfile
+    deploy:
+      resources:
+        limits:
+          memory: 512M
     restart: no
     ports:
       - "8888:8888"
@@ -35,7 +39,7 @@ services:
     deploy:
       resources:
         limits:
-          memory: 1024M
+          memory: 768M
     ports:
       - "8761:8761"
     volumes:
