Enable conditional caching configuration in URL Shortener Service and update YAML profiles to support cache toggling. Refactor `CachingConfig` with `@ConditionalOnProperty` for dynamic cache management.

--- a/url-shortener-service/src/main/resources/application.yaml
+++ b/url-shortener-service/src/main/resources/application.yaml
@@ -11,6 +11,8 @@ spring:
   threads:
     virtual:
       enabled: true
+#  main:
+#    lazy-initialization: true
   profiles:
 #    group:
 #      dev-local:
@@ -107,6 +109,10 @@ logging:
   structured:
     format:
       console:
+
+feature:
+  cache:
+    enabled: ${CACHE_ENABLE:true}
 
 ---
 spring:
