--- a/url-shortener-service/Dockerfile
+++ b/url-shortener-service/Dockerfile
@@ -17,7 +17,7 @@ COPY --chown=appuser:appgroup --from=layers /application/extracted/application/ 
 
 RUN java -XX:ArchiveClassesAtExit=app.jsa -Dspring.context.exit=onRefresh -jar app.jar & exit 0
 
-ENTRYPOINT ["java","-XX:SharedArchiveFile=app.jsa","-XX:+UnlockDiagnosticVMOptions","-XX:+LogCompilation",\
+ENTRYPOINT ["java","-XX:SharedArchiveFile=app.jsa","-XX:+UnlockDiagnosticVMOptions","-XX:+LogCompilation","-XX:+UseCompactObjectHeaders",\
             "-XX:+HeapDumpOnOutOfMemoryError","-XX:+CrashOnOutOfMemoryError","-XX:+UseStringDeduplication",\
             "-XX:+UseContainerSupport","-XX:MaxRAMPercentage=75.0","-XX:InitialRAMPercentage=75.0","-XX:MaxMetaspaceSize=179M",\
             "-XX:+UseG1GC","-XX:MaxGCPauseMillis=200","-Xss1M","-Xms512M","-Xmx768M","-jar","app.jar"]
